# flutter_dojo_langton_ant

./: .gitignore  README.md  docker-compose.yml  exercices_devtools.md
front/langton_flutter/: Dockerfile  README.md  build.yaml  pubspec.yaml
front/langton_flutter/android/app/: build.gradle.kts
front/langton_flutter/ios/Runner/: Info.plist
front/langton_flutter/ios/Runner.xcodeproj/: project.pbxproj
front/langton_flutter/lib/: app.dart  main.dart
front/langton_flutter/lib/core/di/: injection.config.dart  injection.dart
front/langton_flutter/lib/core/network/: api_module.dart  api_module_impl.dart  api_module_stub.dart  rust_client.dart  (+1 more)
front/langton_flutter/linux/: CMakeLists.txt
front/langton_flutter/linux/runner/: my_application.cc
front/langton_flutter/macos/Runner.xcodeproj/: project.pbxproj
front/langton_flutter/mocks/rust/: step.json
front/langton_flutter/test/: widget_test.dart
front/langton_flutter/web/: index.html  manifest.json
front/langton_flutter/windows/: CMakeLists.txt
front/langton_flutter/windows/runner/: Runner.rc  main.cpp
server/langton-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
server/langton-rs/src/: lib.rs  main.rs
server/langton-rs/src/application/: mod.rs  use_cases.rs
server/langton-rs/src/domain/: entities.rs  mod.rs  value_objects.rs
server/langton-rs/src/infrastructure/: mod.rs  web.rs
server/langton-rs/src/interface/: dto.rs  handlers.rs
server/langton-rs/tests/: cucumber.rs
server/langton-rs/tests/features/: langton_ant.feature
(+72 files in other folders)
