[package]
name = "langton_rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "langton_rs"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

[dev-dependencies]
# Testing
cucumber = "0.19"
async-trait = "0.1"
futures = "0.3"

# Pin dependencies to avoid edition2024 requirement
ignore = "=0.4.22"
globset = "=0.4.15"

[[test]]
name = "cucumber"
harness = false
